--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
 flask
-python-dotenv
 langchain
-langchain-community
-langchain-groq
-langchain-huggingface
+langchain_community
+langchain_huggingface
+langchain_groq
 faiss-cpu
 sentence-transformers
+python-dotenv
 gunicorn
+@vercel/blob
