--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,13 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "app.py" }
-  ]
+  ],
+  "functions": {
+    "app.py": {
+      "maxDuration": 60
+    }
+  },
+  "env": {
+    "VERCEL_PYTHON_INSTALLER": "pip"
+  }
 }
-
-
